Serving static files, style server html file code

--- a/node-and-express/airbnb/views/home.html
+++ b/node-and-express/airbnb/views/home.html
@@ -5,12 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>airbnb Home page</title>
+  <!-- <link rel="stylesheet" href="home.css"> -->
+   <link rel="stylesheet" href="output.css">
 </head>
 
-<body style="background-color: black; color: white;">
+<body>
   <header></header>
   <main>
-    <h1>Welcome to airbnb home page</h1>
+    <h1 class="bg-yellow-400 m-2 p-5">Welcome to airbnb home page</h1>
     <a href="/host/add-home"> add Home</a>
   </main>
   <footer></footer>
