--- a/node-and-express/dynamic-path/views/host/home-added.ejs
+++ b/node-and-express/dynamic-path/views/host/home-added.ejs
@@ -18,7 +18,7 @@
         <p class="text-gray-500 mb-8">Your home has been added to our listings and is now visible to guests.</p>
 
         <div class="flex flex-col space-y-3">
-          <a href="/home-list" 
+          <a href="/homes" 
              class="w-full inline-flex justify-center items-center px-4 py-2.5 bg-blue-600 text-white font-medium rounded-lg hover:bg-blue-700 focus:ring-4 focus:ring-blue-300 transition-colors shadow-sm">
             View Home List
           </a>
