perform curd opration in data file

--- a/node-and-express/dynamic-path/views/host/host-home-list.ejs
+++ b/node-and-express/dynamic-path/views/host/host-home-list.ejs
@@ -68,10 +68,14 @@
                                             </div>
 
                                             <div>
-                                                <button
-                                                    class="bg-green-600 text-white font-medium text-sm rounded-lg px-3 py-2">Edit</button>
-                                                <button
+                                                <a href="/host/edit-home/<%= home.id %>?editing=true"
+                                                    class="bg-green-600 text-white font-medium text-sm rounded-lg px-3 py-2">Edit</a>
+                                                
+                                                
+                                                <form action="/host/delete-home/<%= home.id %>" method="post">
+                                                    <button type="submit"
                                                     class="bg-red-600 text-white font-medium text-sm rounded-lg px-3 py-2">Delete</button>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
