--- a/node-and-express/dynamic-path/views/store/favourite-list.ejs
+++ b/node-and-express/dynamic-path/views/store/favourite-list.ejs
@@ -68,7 +68,10 @@
                         <a href="/homes/<%= home.id %>"
                           class="bg-blue-600 text-white font-medium text-sm rounded-lg px-3 py-2">Detail</a>
 
-                        <!-- <%- include("../partials/favourite", {home: home}) %> -->
+                        <form action="/favourites/delete/<%= home.id %>" method="post">
+                          <button type="submit"
+                            class="bg-red-600 text-white font-medium text-sm rounded-lg px-3 py-2">Remove</button>
+                        </form>
                       </div>
                     </div>
                   </div>
