impliment all database logic files base to mySql

--- a/node-express-mysql/mysql-intro/views/store/favourite-list.ejs
+++ b/node-express-mysql/mysql-intro/views/store/favourite-list.ejs
@@ -45,6 +45,7 @@
                         <%= home.houseName %>
                       </h3>
                     </div>
+                    <p class="mb-1"><%= home.description %></p>
 
                     <p class="text-gray-500 text-sm mb-3 flex items-center">
                       <svg class="w-4 h-4 mr-1 text-gray-400 shrink-0" fill="none" stroke="currentColor"
