--- a/node-express-mysql/mysql-intro/views/host/edit-home.ejs
+++ b/node-express-mysql/mysql-intro/views/host/edit-home.ejs
@@ -21,8 +21,21 @@
               type="text" 
               name="houseName" 
               id="houseName"
-              value="<%= editing ? home.houseName : '' %> "
+              value="<%= editing ? home.houseName : '' %>"
               placeholder="e.g. Seaside Villa" 
+              required
+              class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition-all"
+            />
+          </div>
+          
+          <div>
+            <label for="description" class="block text-sm font-medium text-gray-700 mb-1">Description</label>
+            <input 
+              type="text" 
+              name="description" 
+              id="description"
+              value="<%= editing ? home.description : '' %>"
+              placeholder="e.g. About Villa Overview" 
               required
               class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition-all"
             />
@@ -69,7 +82,7 @@
               type="text" 
               name="location" 
               id="location"
-              value="<%= editing ? home.location : '' %> "
+              value="<%= editing ? home.location : '' %>"
               placeholder="e.g. Bali, Indonesia" 
               required
               class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition-all"
