add, delete, update homes on mongoDB database

--- a/node-express-mongoDB/mongodb/views/host/edit-home.ejs
+++ b/node-express-mongoDB/mongodb/views/host/edit-home.ejs
@@ -104,7 +104,7 @@
           </div>
 
           <% if(editing){ %>
-            <input type="hidden" name="id" value="<%= home.id %>"/>
+            <input type="hidden" name="id" value="<%= home._id %>"/>
           <% } %>
 
           <div class="pt-4">
