--- a/node-express-mongoDB/mongodb/views/partials/favourite.ejs
+++ b/node-express-mongoDB/mongodb/views/partials/favourite.ejs
@@ -8,5 +8,5 @@
     </svg>
     Save
   </button>
-  <input type="hidden" name="id" value="<%= home.id %>">
+  <input type="hidden" name="id" value="<%= home._id %>">
 </form>
