--- a/node-express-mongoDB/mongodb/views/store/home-list.ejs
+++ b/node-express-mongoDB/mongodb/views/store/home-list.ejs
@@ -69,7 +69,7 @@
                                             </div>
 
                                             <div>
-                                                <a href="/homes/<%= home.id %>" class="bg-blue-600 text-white font-medium text-sm rounded-lg px-3 py-2">Detail</a>
+                                                <a href="/homes/<%= home._id %>" class="bg-blue-600 text-white font-medium text-sm rounded-lg px-3 py-2">Detail</a>
 
                                                 <%- include("../partials/favourite", {home: home}) %>
                                             </div>
