--- a/node-express-mongoose/authentication_authorization/views/auth/login.ejs
+++ b/node-express-mongoose/authentication_authorization/views/auth/login.ejs
@@ -14,6 +14,7 @@
         </div>
 
         <form action="/login" method="POST" class="p-8 space-y-6">
+          <%- include("../partials/error") %>          
           
           <div>
             <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email</label>
@@ -22,6 +23,7 @@
               name="email" 
               id="email"
               placeholder="Enter Your Email" 
+              value="<%= oldInput ? oldInput.email : ''%>"
               required
               class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition-all"
             />
