--- a/node-express-mongoose/fileUpload_download/views/host/edit-home.ejs
+++ b/node-express-mongoose/fileUpload_download/views/host/edit-home.ejs
@@ -90,17 +90,14 @@
           </div>
 
           <div>
-            <label for="photoUrl" class="block text-sm font-medium text-gray-700 mb-1">Photo URL</label>
+            <label for="photo" class="block text-sm font-medium text-gray-700 mb-2">Property Photo</label>
             <input 
-              type="url" 
-              name="photoUrl" 
-              id="photoUrl"
-              value="<%= editing ? home.photoUrl : '' %> "
-              placeholder="https://example.com/image.jpg" 
-              required
-              class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition-all"
-            />
-            <p class="text-xs text-gray-500 mt-1">Paste a direct link to an image.</p>
+              type="file" 
+              name="photo" 
+              id="photo"
+              accept="image/*"
+              class="w-full px-4 py-2 pb-4 "
+            />            
           </div>
 
           <% if(editing){ %>
