--- a/node-express-mongoose/fileUpload_download/views/host/edit-home.ejs
+++ b/node-express-mongoose/fileUpload_download/views/host/edit-home.ejs
@@ -13,7 +13,7 @@
           <p class="text-gray-500 mt-1"><%= editing ? "Edit" : "Enter" %> the details below to <%= editing ? "update" : "list" %> your property.</p>
         </div>
 
-        <form action="/host/<%= editing ? 'edit-home' : 'add-home' %>" method="POST" class="p-8 space-y-6">
+        <form action="/host/<%= editing ? 'edit-home' : 'add-home' %>" method="POST" enctype="multipart/form-data" class="p-8 space-y-6">
           
           <div>
             <label for="houseName" class="block text-sm font-medium text-gray-700 mb-1">House Name</label>
